# Tetra_Project

./: .gitignore  README.md  classes.txt  pyproject.toml  requirements.txt
notebooks/: backgrounds_processing.ipynb  bb_check.ipynb  bb_repartition.ipynb  coco_eval.ipynb  data_test.ipynb  data_visualization.ipynb  images_processing.ipynb  inference.ipynb  inference_batches.ipynb  model_results.ipynb  models_benchmark.ipynb  test_model.ipynb
src/tetra/data/: data_loader.py  data_processor.py  k_fold.py  tiling.py
src/tetra/model/: eval.py  inference.py  predict.py  test.py  train.py  tune.py  val.py
src/tetra/utils/: data_processor.py  del_images.py  file_io.py  graphs.py  k_fold.py  order_dataset.py  tiling.py  viewer.py
test/: annotations_test.py  data_test.py  dataset.py  inference_test.py  val_test.py  view_test.py
utils/: images_size.py  order_dataset.py  resize_image.py  split_images.py  tiling.py  viewer.py
